Task level v2-criar tasks apenas os usuarios premium

--- a/Front-TaskLevel/html/home.html
+++ b/Front-TaskLevel/html/home.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/Logo.png" id='logoutButton' alt="Logo TaskLevel">
+        <img class="logo" src="../img/Logo.png" alt="Logo TaskLevel">
         <div class="container">
             <div class="aba-status">
                 <button onclick="filtrarAndamento()" class="filtro" id="emAndamento">Em Andamento</button>
                 <button onclick="filtrarConclusao()" class="filtro">Concluídas</button>
             </div>
-            <img src="../img/foto-perfil.png" alt="">
+            <img src="../img/foto-perfil.png"  id='logoutButton' alt="">
         </div>
         <hr>
     </header>
@@ -43,6 +43,7 @@
                     </div>
                 </div>
             </div>
+            <h5 class="comentarios"id="comentariosEditarTarefa"></h5>
         </div>
         <div class="atividade_focus" id="campoCriacao" style="display: none;">
             <div class="background-container_focus">
